--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -934,7 +934,9 @@
                                             <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="اسم شخصي First Name"
-                                                           class="col-sm-2 control-label">שם פרטי&nbsp;</label>
+                                                           class="col-sm-2 control-label">שם פרטי&nbsp;
+                                                        <span class="required">*</span>
+                                                    </label>
                                                     <div class="col-sm-6">
                                                         <input id="patientFirstName" name="patientFirstName" type="text"
                                                                class="form-control">
