--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -617,13 +617,10 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
-<<<<<<< Updated upstream
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.6.1/jszip.min.js" integrity="sha512-qDzk+Wqv8uAmrIr0t9Hjo4qM3DjvwTWuuuG3w9H8JBKd1EMpMaUEKoHKYbX6yP+ilTloEADFKFwKMzOZLlgTEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-=======
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.6.1/jszip.min.js"
             integrity="sha512-qDzk+Wqv8uAmrIr0t9Hjo4qM3DjvwTWuuuG3w9H8JBKd1EMpMaUEKoHKYbX6yP+ilTloEADFKFwKMzOZLlgTEg=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
->>>>>>> Stashed changes
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
@@ -2619,7 +2616,7 @@
                 '<span class="numOfPassengers">single passenger</span>';
             let escortsPhone2render = "";
             let equipmentsAndnumOfPassengers = "";
-            let gender = GetPatientGender(ridepat.Pat.GenderAsEnum, isAssistant)
+
             if (validateMobileNumFullVersion(ridepat.Pat.CellPhone)) {
                 patientPhone2render = `<span class="patientPhone2render">${addSeperator2MobileNum(
                     ridepat.Pat.CellPhone,
@@ -2681,7 +2678,7 @@
             }
 
             let patientAddons =
-                equipmentsAndnumOfPassengers + patientPhone2render + escortsPhone2render + gender;
+                equipmentsAndnumOfPassengers + patientPhone2render + escortsPhone2render;
             let patientName2render = "";
             let patient_English_Name2render = "";
 
@@ -3015,12 +3012,9 @@
 
                         <div class="pull-right">
                             <a href="passwordForm.html">
-<<<<<<< Updated upstream
                                 <span class="logo" id="userName"></span>&nbsp;<span style="color:#3BAFDA" class="logo" id="databaseType"></span>
-=======
                                 <span class="logo" id="userName"></span>&nbsp;<span style="color:#3BAFDA" class="logo"
                                                                                     id="databaseType"></span>
->>>>>>> Stashed changes
                             </a>
                         </div>
                     </div>
@@ -3381,18 +3375,15 @@
 
 
 
-<<<<<<< Updated upstream
     <div class="modal fade" id="assignDriverModal" role="dialog" data-keyboard="false" data-backdrop="static" aria-labelledby="documentedRidesTitle" aria-hidden="true"></div>
     <div class="modal fade" id="editTimeModal" role="dialog" data-keyboard="false" data-backdrop="static" aria-labelledby="editTimeTitle" aria-hidden="true"></div>
     <div class="modal fade" id="editPatientStatusModal" role="dialog" data-keyboard="false" data-backdrop="static" aria-labelledby="editPatientStatusTitle" aria-hidden="true"></div>
-=======
     <div class="modal fade" id="assignDriverModal" role="dialog" data-keyboard="false" data-backdrop="static"
          aria-labelledby="documentedRidesTitle" aria-hidden="true"></div>
     <div class="modal fade" id="editTimeModal" role="dialog" data-keyboard="false" data-backdrop="static"
          aria-labelledby="editTimeTitle" aria-hidden="true"></div>
     <div class="modal fade" id="editPatientStatusModal" role="dialog" data-keyboard="false" data-backdrop="static"
          aria-labelledby="editPatientStatusTitle" aria-hidden="true"></div>
->>>>>>> Stashed changes
 
     <div class="modal fade" id="filtersModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
         <div class="modal-dialog" role="document">
